syntax = "proto3";

package common;

message NodeInfo {
    string host_addr = 1;
    bytes eth_mac_addr = 2;
    int32 xdp_subnet_id = 3;
}

message Status {
    enum Code {
        OK = 0;
        FAIL = 1;
    }
    Code code = 1;
    string message = 2;
}