syntax = "proto3";

package remote_xdp_port;

import "common.proto";

service RemoteXdpPortService {
    rpc CreateXdpPort(common.NodeInfo) returns (common.Status);
}
